[package]
name = "jjp"
version = "0.1.0"
authors = ["wuyaoping <jamykp@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
anyhow = "1.0.65"
reqwest = { version = "0.11.26", features = ["socks", "stream"] }
tokio = { version = "1.36.0", features = ["rt", "fs", "time"] }
futures = "0.3.30"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }

[profile.release]
strip = "debuginfo"
panic = "abort"
